# pba_g2o_compare

./: .gitignore  .gitmodules  LICENSE  README.md  gettimes.sh
g2o_ba/: CMakeLists.txt
g2o_ba/include/: bundle_adjustment.h  converter.h  keyframe.h  mappoint.h  parser.h
g2o_ba/src/: bundle_adjustment.cc  converter.cc  g2o_driver.cc  main.cc  parser.cc
inputs/: global_02.tar.bz
outputs/pba/: out-problem-21-11315-pre.txt  out_cpu.txt  out_cpu_float.txt
times/: g2o_dubrovnik.csv  g2o_global_00.csv  g2o_global_02.csv  g2o_global_13.csv  g2o_ladybug.csv  pba_dubrovnik.csv  pba_global_00.csv  pba_global_02.csv  pba_global_13.csv  pba_ladybug.csv
